# deque-testing

./: CMakeLists.txt  anikienko_anton.cpp  anikienko_anton.h  counted.cpp  fedorova_irina.cpp  fedorova_irina.h  hil_valeria.cpp  hil_valeria.h  krivopaltsev_dmitriy.cpp  krivopaltsev_dmitriy.h  nefedov_dmitriy.cpp  nefedov_dmitriy.h  pushkin_nikita.cpp  pushkin_nikita.h  savinov_nikita.cpp  savinov_nikita.h  sharipov_samariddin.cpp  sharipov_samariddin.h  shelepov_anton.cpp  shelepov_anton.h  smirnov_roman.cpp  smirnov_roman.h  std.cpp  tests.inl  valeev_nursan.h
